Second try at bootstrap buttons on guess entry - primary buttons have safari issue on mobile where pressing one button will highlight the button directly beneath it on the next entry screen. Fix makes colors static (no hover).

--- a/app/guess-entry/guess-entry.css
+++ b/app/guess-entry/guess-entry.css
@@ -8,6 +8,9 @@
 
 .geGuessBtn {
 	margin: 5px auto;
+	color: #0033cc;
+	background-color: #f0f0f0;
+	border: #007bff 2px solid;
 }
 
 .geValidateIcon {
